--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+:root {
+    
+        --text-color: #DBE4EF;
+        --card-front-color: #144480;
+        --card-back-color: #00F4BF;
+}   
 body {
-    background-color: bisque;
+    background: url("img/bg-desktop.webp");
     font-family: Bai Jumrre
 
 }
@@ -17,20 +23,32 @@ body {
 }
 
 .cartao_conteudo {
+    background-color: var(--card-front-color);
     text-align: center;
-    background-color: aquamarine;
+   /* background-color: aquamarine; */
     height: 100%;
 
 }
 
 .cartao_conteudo h3 {
-    background-color: tomato;
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+}
+
+.cartao_conteudo_pergunta {
+    color: var(--text-color);
+    font-weight: 500;
+}
+
+.cartao_conteudo_resposta {
+    color: var(--card-back-color);
+    font-weight: 700;
 }
 
 
